Text overlapping in events fixed

--- a/client/stylesheets/calendar/calendar.css
+++ b/client/stylesheets/calendar/calendar.css
@@ -2,3 +2,10 @@
     margin-left: 10px;
     margin-bottom: 10px;
 }
+
+@media screen and (max-width: 768px )  {
+    .organiser-hidden {
+        display:none;
+    }
+}
+
